refactor: Refactor feature to print product list